--- a/src/NReco.Text.AhoCorasickDoubleArrayTrie/NReco.Text.AhoCorasickDoubleArrayTrie.csproj
+++ b/src/NReco.Text.AhoCorasickDoubleArrayTrie/NReco.Text.AhoCorasickDoubleArrayTrie.csproj
@@ -5,7 +5,7 @@
     <Copyright>Copyright (c) 2017-2022 Vitalii Fedorchenko and contributors</Copyright>
     <AssemblyTitle>NReco.Text.AhoCorasickDoubleArrayTrie</AssemblyTitle>
     <Title>Fast Aho Corasick algorithm based on Double Array Trie.</Title>
-    <VersionPrefix>1.1.0</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <Authors>Vitalii Fedorchenko</Authors>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -28,8 +28,12 @@ matcher.ParseText(text, (hit) =&gt; {
     <PackageLicenseUrl>https://raw.githubusercontent.com/nreco/AhoCorasickDoubleArrayTrie/master/LICENSE</PackageLicenseUrl>
     <RootNamespace>NReco.Text</RootNamespace>
     <NoWarn>1591</NoWarn>
-	<LangVersion>9.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
+    <PackageReference Include="Overby.Extensions.AsyncBinaryReaderWriter" Version="1.0.39" />
+  </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
